# investment_app

./: .env.example  .gitignore  README.md  _write_dashboard.py  pyproject.toml  render.yaml  start.ps1
app/: config.py  job_store.py  main.py  models.py  schemas.py  security.py
app/routers/: analytics.py  journal.py  portfolio.py
app/services/: attribution.py  drawdown.py  drift.py  factors.py  forecast.py  harvest.py  market_data.py  optimizer.py  rebalance.py  recommendation.py  risk.py  scenario.py  signals.py
dashboard/: streamlit_app.py
samples/: holdings_example.csv
