[project]
name = "investment-app"
version = "0.1.0"
description = "Personal portfolio management with SAA/TAA analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "yfinance>=0.2.40",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.36.0",
  "plotly>=5.22.0"
]

[tool.uvicorn]
factory = false
reload = true
host = "127.0.0.1"
port = 8000
